Updated .eslintrc with jest globals.

--- a/.eslintrc
+++ b/.eslintrc
@@ -34,7 +34,11 @@
     }
   },
   "globals": {
-    "Promise": true
+    "Promise": true,
+    "describe": true,
+    "it": true,
+    "expect": true,
+    "jest": true
   },
   "plugins": [
     "react"
