Fixed eslint no-console warning to allow console warn and error.

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,15 @@
         "vars": "all",
         "args": "after-used"
       }
+    ],
+    "no-console": [
+      "error",
+      {
+        allow: [
+          "warn",
+          "error"
+          ]
+      }
     ]
   },
   "env": {
